@@ -50,9 +50,11 @@ MMUtils::MMUtils(const std::string &eff_filename, const std::string &fake_filena
     
     fake_map_boosted_mu = (TH2F*)m_fake_rootfile.Get("2Dfake_boosted_mu")->Clone();    
     fake_map_boosted_mu->SetDirectory(0);  
-      
-    
+       
   }
+  
+  m_hSvc.create1D("lepPt", "; Pt of lepton [GeV]; Events", 40, 0, 500);
+  m_hSvc.create1D("weights", "; weights; Events", 100000, -1, 1); 
   
 
 }
@@ -73,7 +75,9 @@ MMUtils::~MMUtils(){
   delete fake_map;
 } 
 
-float MMUtils::getMMweights(const Event &evt) {
+float MMUtils::getMMweights(const Event &evt, const std::string &s) {
+   
+   HistogramService *h = &m_hSvc;
    
    float lepPt(0);
    float closejl_pT(0); 
@@ -97,7 +101,8 @@ float MMUtils::getMMweights(const Event &evt) {
    }
    
    lepPt = lepP4.Perp()*1e-3; 
-
+   h->h1D("lepPt", "", s)->Fill(lepPt*1e-3); 
+   
    float deltaRapidity2 = 99;
    float deltaPhi2	= 99;
    float deltaR_tmp     = 99;
@@ -149,7 +154,8 @@ float MMUtils::getMMweights(const Event &evt) {
    //--> Implementing weights
    float Weight = 1;
 
-   //std::cout << "isTight: " << isTight << std::endl;
+   std::cout << "isTight: " << isTight << std::endl;
+   std::cout << "eff: " << effRate << " - fake: " << fakeRate << std::endl;
 
    if (isTight){
      	if((effRate - fakeRate) !=0.)	Weight = fakeRate*(effRate - 1)/(effRate - fakeRate); 
@@ -161,6 +167,7 @@ float MMUtils::getMMweights(const Event &evt) {
    
    }//isTight
    
+   h->h1D("weights", "", s)	   ->Fill(Weight);
    return Weight;  
 
 }//getMMweights
